# BinOcular

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
crates/binocular-cli/: Cargo.toml
crates/binocular-cli/assets/ascii/: badge.txt  banner.txt
crates/binocular-cli/src/: main.rs
crates/binocular-cli/tests/: cli_complex_example.rs  cli_crash_harness.rs  cli_example.rs
crates/binocular-core/: Cargo.toml
crates/binocular-core/src/: buffer.rs  error.rs  interpret.rs  lib.rs
crates/binocular-gui/: Cargo.toml
crates/binocular-gui/src/: main.rs
crates/binocular-schema/: Cargo.toml
crates/binocular-schema/src/: ast.rs  error.rs  lib.rs  parser.rs
examples/: complex_schema.yaml  dynamic_length_schema.yaml  dynamic_offset_schema.yaml  include_common.yaml  include_root_schema.yaml  simple_schema.yaml  structured_schema.yaml
scripts/: build-release-manifest.py
