[package]
name = "binocular-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
binocular-core = { path = "../binocular-core" }
binocular-schema = { path = "../binocular-schema" }

[dev-dependencies]
assert_cmd = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"